prescoring exception handling
