# src/main/resources/openapi/conveyor_api.yaml
@@ -34,6 +34,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListLoanOfferDto'
+        422:
+          description: 'Unporcessable Entity'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
   /conveyor/calculation:
     post:
       operationId: conveyor_calculation
@@ -106,6 +112,7 @@ components:
           format: date
           description: 'Дата рождения'
           example: '2000-01-01'
+          x-constraints: AdultBirthDate
         passportSeries:
           type: string
           minLength: 4
@@ -122,7 +129,7 @@ components:
           example: '000000'
     ListLoanOfferDto:
       type: array
-      description:  'Список кредитных предложений'
+      description: 'Список кредитных предложений'
       items:
         $ref: '#/components/schemas/LoanOfferDto'
     LoanOfferDto:
@@ -381,3 +388,26 @@ components:
           format: double
           description: 'Остаток долга'
           example: 1000
+    ErrorMessage:
+      type: object
+      description: 'Сообщение об ошибке'
+      properties:
+        timestamp:
+          type: string
+          format: date-time
+          description: 'Дата и время ошибки'
+        exception:
+          type: string
+          description: 'Исключение'
+        status:
+          type: integer
+          description: 'Статус код'
+        error:
+          type: string
+          description: 'Ошибка'
+        path:
+          type: string
+          description: 'Путь'
+        message:
+          type: string
+          description: 'Сообщение об ошибке'
